Rewrite language/index.md (402->600+ lines)
Complete rewrite with:
- Full language feature evolution table (JDK 5 through JDK 26)
- Lambda/Stream (JDK 8), var (JDK 10), switch expressions (JDK 14)
- Records (JDK 16), sealed classes (JDK 17), pattern matching (JDK 16-21)
- String processing: Text Blocks (JDK 15), String Templates (withdrawn), Compact Strings (JDK 9)
- ClassFile API evolution (JEP 457/466/484)
- All JEP numbers verified correct
- invokedynamic string concat correctly at JDK 9 (JEP 280)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>